--- a/ASP.NETCore/DojoSurvey/Views/Survey/display.cshtml
+++ b/ASP.NETCore/DojoSurvey/Views/Survey/display.cshtml
@@ -9,14 +9,16 @@
     <title>Display</title>
 </head>
 
-<body>
-    <div>
-        <h2>Submitted Info</h2>
-        <div>
+<body class="bg-slate-600">
+
+    <div class="grid justify-center mt-2 p-3">
+        <div class="grid justify-center gap-4 border w-52 font-semibold ">
+            <div class="text-xl">Submitted Info</div>
             <p>Name: @Context.Session.GetString("Name")</p>
             <p>Location: @Context.Session.GetString("Location")</p>
             <p>Language: @Context.Session.GetString("Language")</p>
             <p>Comments: @Context.Session.GetString("Comments")</p>
+            <a href="/" class="border border-black rounded-md p-0.5 mb-1 text-center"><button>Go Back</button></a>
         </div>
     </div>
 </body>
