--- a/ASP.NETCore/DojoSurveyValidations/Views/Home/display.cshtml
+++ b/ASP.NETCore/DojoSurveyValidations/Views/Home/display.cshtml
@@ -6,7 +6,11 @@
 <div class="grid justify-center mt-2 p-3">
         <div class="grid justify-center gap-4 border w-52 font-semibold ">
             <div class="text-xl">Submitted Info</div>
-            <p>Name: @Context.Session.GetString("Name")</p>
+            <p>@Model.Name</p>
+            <p>@Model.Location</p>
+            <p>@Model.Language</p>
+            <p>@Model.Comment</p>
+            @* <p>Name: @Context.Session.GetString("Name")</p>
             <p>Location: @Context.Session.GetString("Location")</p>
             <p>Language: @Context.Session.GetString("Language") </p>
             @{
@@ -19,7 +23,7 @@
                 <p>Comments:@Context.Session.GetString("Comment")</p>
 
                 }
-            }
+            } *@
             
             <a href="/" class="border border-black rounded-md p-0.5 mb-1 text-center"><button>Go Back</button></a>
         </div>
