--- a/ORMs/ProductsAndCategories/Views/Home/Categories.cshtml
+++ b/ORMs/ProductsAndCategories/Views/Home/Categories.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-@model Association
+@model MyViewModel
 
  <div class="container">
         <div class="d-flex mb-3 justify-content-around w-50 mx-auto">
@@ -13,12 +13,12 @@
         <div class="row m-5"><div class="col">
             <div class="col border-start border-black ps-5">
                 <p class="display-6">Add a Product to this category</p>
-                @await Html.PartialAsync("AddAssocCat")
+                @await Html.PartialAsync("AddAssocCat", Model)
             </div>
-                <form asp-action="AddProduct" method="post" asp-route-CategoryId="@ViewBag.OC.CategoryId">
+                <form asp-action="AddProduct" method="post" asp-route-CategoryId="@Model.Category.CategoryId">
                     <div class="form-floating mb-3 border shadow-sm">
                         <select name="ProductId" class="form-control" >
-                            @foreach (Product c in ViewBag.AP)
+                            @foreach (Product c in Model.AllProducts)
                                 {
                                     <option selected value="@c.ProductId">@c.Name</option>
                                 }
