--- a/ORMs/ProductsAndCategories/Views/Home/Products.cshtml
+++ b/ORMs/ProductsAndCategories/Views/Home/Products.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-@model Association
+@model MyViewModel
  <div class="container">
         <div class="d-flex mb-3 justify-content-around w-50 mx-auto">
             <a class="display-5" href="/">Products</a>
@@ -10,15 +10,15 @@
         </div>
         <div class="row m-5">
             <div class="col border-start border-black ps-5">
-               @await Html.PartialAsync("AddAssocProd")
+               @await Html.PartialAsync("AddAssocProd", Model)
             </div>
             <div class="col">
-                <form asp-action="AddCategory" method="post" asp-route-ProductId="@ViewBag.OP.ProductId">
+                <form asp-action="AddCategory" method="post" asp-route-ProductId="@Model.Product.ProductId">
                     <div class="form-floating mb-3 border shadow-sm">
-                        <select asp-for="CategoryId" class="form-control" >
-                            @foreach (Category c in ViewBag.EC)
+                        <select name="CategoryId" class="form-control" >
+                            @foreach (Category c in Model.AllCategories)
                                 {
-                                    <option selected value="@c.CategoryId">@c.Name</option>
+                                    <option value="@c.CategoryId">@c.Name</option>
                                 }
                             </select>
                             <label for="Category">Category</label>
