--- a/BeltPrep/WeddingPlanner/Views/Home/Index.cshtml
+++ b/BeltPrep/WeddingPlanner/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                         <span asp-validation-for="PasswordConfirm"></span>
                     </div>
                     <div class="mb-3 w-25 mx-auto">
-                        <button type="submit" class="btn btn-outline-dark">Register</button>
+                        <button type="submit" class="btn btn-outline-light">Register</button>
                     </div>
                 </form>
             </div>
