--- a/BeltPrep/WeddingPlanner/Views/Home/LoginForm.cshtml
+++ b/BeltPrep/WeddingPlanner/Views/Home/LoginForm.cshtml
@@ -14,6 +14,6 @@
         <label for="UserPassword">Password</label>
     </div>
     <div class="mb-3 w-25 mx-auto">
-        <button class="btn btn-outline-dark">Submit</button>
+        <button class="btn btn-outline-light">Submit</button>
     </div>
 </form>
