--- a/BeltPrep/WeddingPlanner/Views/Home/OneWedding.cshtml
+++ b/BeltPrep/WeddingPlanner/Views/Home/OneWedding.cshtml
@@ -1,23 +1,25 @@
 @model MyViewModel
 
 <div>
-    <div class="d-flex mb-4">
+    <div class="d-flex mb-4 justify-content-around">
         <h3>Welcome @Context.Session.GetString("FirstName")</h3>
-        <p>Home</p>
+        <p><a href="/weddings">Home</a></p>
         <span>|</span>
-        <a href=""></a>
+        <a href="/weddings/create">Plan A Wedding</a>
         <span>|</span>
         <a href="/logout">Logout</a>
     </div>
-    <div>
-        @Model.Wedding.WedderOne & @Model.Wedding.WedderTwo 's Wedding'
+    <div class="h5">
+        @Model.Wedding.WedderOne & @Model.Wedding.WedderTwo 's wedding
     </div>
-    <div>@Model.Wedding.Date</div>
-    <h6>Guests</h6>
-    <ul>
-        @foreach (Guest i in Model.AllGuests)
-        {
-            <li>@i.User.FirstName</li>
-        }
-    </ul>
+    <div>@Model.Wedding.Date.ToShortDateString()</div>
+    <h6 class="mt-2">Guests</h6>
+    <div class="border">
+        <ul>
+            @foreach (Guest i in Model.AllGuests)
+            {
+                <li>@i.User.FirstName</li>
+            }
+        </ul>
+    </div>
 </div>
