--- a/BeltPrep/WeddingPlanner/Views/Home/Weddings.cshtml
+++ b/BeltPrep/WeddingPlanner/Views/Home/Weddings.cshtml
@@ -3,7 +3,7 @@
 }
 @model MyViewModel
 <div>
-    <div class="d-flex mb-4">
+    <div class="d-flex mb-4 justify-content-around">
         <h3>Welcome @Context.Session.GetString("FirstName")</h3>
         <p>Home</p>
         <span>|</span>
@@ -11,7 +11,7 @@
         <span>|</span>
         <a href="/logout">Logout</a>
     </div>
-    <table class="table">
+    <table class="table table-success table-striped">
         <thead>
             <th>Wedding Of</th>
             <th>Date</th>
